# pidet

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
pidet/: __init__.py
pidet/cmd/: pidet.py
pidet/fio/: parser.py
pidet/iperf3/: parser.py
