[metadata]
name = pidet
summary = Performance Ingest Data Extraction Tool
author = Erno Kuvaja
author_email = ekuvaja@redhat.com
description_file =
    README.md
home_page = https://github.com/jokke-ilujo/pidet
project_urls =
    Bug Tracker = https://github.com/jokke-ilujo/pidet/issues
python_requires = >=3.6
classifiers =
    Development Status :: 4 - Beta,
    Environment :: Console,
    Intended Audience :: Information Technology,
    Intended Audience :: System Administrators,
    Natural Language :: English,
    Programming Language :: Python :: 3,
    License :: OSI Approved :: Apache License 2,0,
    Operating System :: POSIX :: Linux,
    Topic :: Software Development :: User Interfaces,
    Topic :: System :: Benchmark,
    Topic :: System :: Monitoring,
    Topic :: Utilities,
[files]
packages=
    pidet
[entry_points]
console_scripts =
    pidet = pidet.cmd.pidet:main
